@@ -2,5 +2,5 @@
   "strength": 2,
   "added_stress": 1,
   "added_recoil": 2,
-  "added_spread": 1
+  "added_spread": 2
 }
